--- a/finalproject/bookshelf/templates/bookshelf/registautilizador.html
+++ b/finalproject/bookshelf/templates/bookshelf/registautilizador.html
@@ -8,14 +8,17 @@
 </header>
 <form action="{% url 'bookshelf:registautilizador'%}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
-    Nome:<br><input id="name" name="name" type="text"><br>
+    Name:<br><input id="name" name="name" type="text"><br>
     E-mail: <br><input autocomplete="off" id="email" name="email" type="email"><br>
     Password:<br><input id="password" name="password" type="password"><br>
+    <div id="addPic">
+        Profile Pic:<br><input type="file" name="myfile"><br>
+    </div>
     <label for="role">Choose a Role:</label>
 
     <select name="role" id="role">
         <option value="Publisher">Publisher</option>
-        <option value="User">User</option>
+        <option value="User">Reader</option>
     </select>
     <input style="margin-top: 10px;" type="submit" value="Register">
 </form>
