--- a/finalproject/bookshelf/templates/bookshelf/loginview.html
+++ b/finalproject/bookshelf/templates/bookshelf/loginview.html
@@ -4,13 +4,42 @@
 
 {% block bodyPag %}
 <header>
-    <div>Log in</div>
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href="{% static 'logup.css'%}">
+<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+    <title>Log in</title>
 </header>
+<div class="main">
+		<input type="checkbox" id="chk" aria-hidden="true">
+	<div class="signup">
     <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
     {% load static %}
     {% csrf_token %}
-        Nome:<br><input type="text" id= "name" name="name"><br>
-        Password:<br><input type="password" id= "password" name="password"><br>
-        <input type="submit" value="Log in" >
-   </form>
+		<label for="chk" aria-hidden="true">Sign up</label>
+		<input type="text" id="name" name="name" placeholder="Username" required="">
+		<input type="email" name="email" id="email" name="email" placeholder="Email" required="">
+		<input type="password" id="password" name="password" placeholder="Password" required="">
+		<button>Sign up</button>
+		</form>
+		</div>
+		<div class="SelectRole">
+			<label for="role">Choose a Role:</label>
+			<select name="role" id="role">
+				<option value="Publisher">Publisher</option>
+				<option value="User">User</option>
+			</select>
+			<input style="margin-top: 10px;" type="submit" value="Register">
+		</div>
+
+
+
+<!--			<div class="login">
+				<form>
+					<label for="chk" aria-hidden="true">Login</label>
+					<input type="text"  id="namelogin" name="name" placeholder="Username" required="">
+					<input type="password" id= "passwordlogin" name="password" placeholder="Password" required="">
+					<button>Login</button>
+				</form>
+			</div>-->
+	</div>
 {% endblock %}
