--- a/finalproject/bookshelf/templates/bookshelf/loginview.html
+++ b/finalproject/bookshelf/templates/bookshelf/loginview.html
@@ -4,13 +4,42 @@
 
 {% block bodyPag %}
 <header>
-    <div>Log in</div>
-</header>
-    <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
     {% load static %}
-    {% csrf_token %}
-        Nome:<br><input type="text" id= "name" name="name"><br>
-        Password:<br><input type="password" id= "password" name="password"><br>
-        <input type="submit" value="Log in" >
-   </form>
+    <title>Log in</title>
+</header>
+<div class="main">
+    <input type="checkbox" >
+    <label >Sign up</label>
+
+    <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
+        {% load static %}
+        {% csrf_token %}
+        <input type="text" id="name" name="name" placeholder="Username" required="">
+        <input type="email" name="email" id="email" name="email" placeholder="Email" required="">
+        <input type="password" id="password" name="password" placeholder="Password" required="">
+        <div id="addPic">
+            Profile Pic:<br><input type="file" name="myfile"><br>
+        </div>
+
+
+        <label for="role">Choose a Role:</label>
+        <select class="role" name="role" id="role">
+            <option value="Publisher">Publisher</option>
+            <option value="User">User</option>
+        </select>
+
+        <input style="margin-top: 10px;" name="Register" type="submit" value="Register">
+    </form>
+
+
+    <div class="login">
+        <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <label >Login</label>
+            <input type="text" id="namelogin" name="name" placeholder="Username" required="">
+            <input type="password" id="passwordlogin" name="password" placeholder="Password" required="">
+            <input type="submit" name="Log in" value="Log in">
+        </form>
+    </div>
+</div>
 {% endblock %}
