--- a/finalproject/bookshelf/templates/bookshelf/index.html
+++ b/finalproject/bookshelf/templates/bookshelf/index.html
@@ -28,6 +28,7 @@
 </header>
 
 {% endblock %}
+{% block nav %}
 <nav>
     {% if request.user.is_authenticated %}
     {% if request.user.reader.image == "" %}
@@ -58,5 +59,6 @@
     {% endif %}
     <hr>
 </nav>
+{% endblock %}
 </body>
 </html>
