--- a/finalproject/bookshelf/templates/bookshelf/loginview.html
+++ b/finalproject/bookshelf/templates/bookshelf/loginview.html
@@ -11,42 +11,40 @@
 </header>
 <div class="main">
     <input type="checkbox" id="chk" aria-hidden="true">
-    <label for="chk" aria-hidden="true">Sign up</label>
+    <label for="chk" aria-hidden="true">Register</label>
     <div class="signwrapped">
-        <div class="signup">
-            <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
-                {% load static %}
-                {% csrf_token %}
+        <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
+            {% load static %}
+            {% csrf_token %}
+            <div class="signup">
+                Information:
                 <input type="text" id="name" name="name" placeholder="Username" required="">
                 <input type="email" name="email" id="email" name="email" placeholder="Email" required="">
                 <input type="password" id="password" name="password" placeholder="Password" required="">
-            </form>
-        </div>
-        <div class="SelectRole">
-            <label for="role">Choose a Role:</label>
-            <select class="role" name="role" id="role">
-                <option value="Publisher">Publisher</option>
-                <option value="User">User</option>
-            </select>
-        </div>
-        <button>Sign up</button>
+            </div>
+            <div class="SelectRole">
+                Profile Picture:<input type="file" name="myfile">
+                Choose a Role:
+                <select class="role" name="role" id="role">
+                    <option value="Publisher">Publisher</option>
+                    <option value="User">User</option>
+                </select>
+            </div>
+            <input style="margin-top: 10px;" name="Register" type="submit" value="Register">
+        </form>
     </div>
 
-    <!--  <div class="SelectRole">
-          <label for="role">Choose a Role:</label>
-          <select name="role" id="role">
-              <option value="Publisher">Publisher</option>
-              <option value="User">User</option>
-          </select>
-      </div>-->
 
     <div class="login">
-        <form>
-            <label for="chk" aria-hidden="true">Login</label>
+        <form action="{% url 'bookshelf:loginview'%}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+           <label for="chk" aria-hidden="true">Login</label>
             <input type="text" id="namelogin" name="name" placeholder="Username" required="">
             <input type="password" id="passwordlogin" name="password" placeholder="Password" required="">
-            <button>Login</button>
+            <input type="submit" name="Login" value="Log in" >
         </form>
     </div>
 </div>
+{% endblock %}
+{% block nav %}
 {% endblock %}
