--- a/finalproject/bookshelf/templates/bookshelf/loginview.html
+++ b/finalproject/bookshelf/templates/bookshelf/loginview.html
@@ -1,6 +1,8 @@
 {% extends "bookshelf/index.html" %}
 {% block title %}Login
 {% endblock %}
+{% block bodyPag %}
+{% endblock %}
 {% block nav %}
 {% endblock %}
 {% block content %}
@@ -24,7 +26,7 @@
                 <input type="password" id="password" name="password" placeholder="Password" required="">
             </div>
             <div class="SelectRole">
-                Profile Picture:<input type="file" name="myfile">
+                Profile Picture:<input type="file" name="myfile" id="myfile">
                 Choose a Role:
                 <select class="role" name="role" id="role">
                     <option value="Publisher">Publisher</option>
@@ -46,4 +48,5 @@
         </form>
     </div>
 </div>
+
 {% endblock %}
